update elements and add firebase config

--- a/components/navbar.html
+++ b/components/navbar.html
@@ -1,12 +1,10 @@
-    <nav class="navbar">
+<nav class="navbar">
         <div class="nav-container">
             <div class="logo">
                 <span class="logo-text">Closetry</span>
             </div>
             <ul class="nav-menu">
-                <li><a href="#outfit-maker" class="nav-link">Closetry</a></li>
-                <li><a href="#dressfleet" class="nav-link">Dressfleet</a></li>
-                <li><a href="#blog" class="nav-link">Blog</a></li>
+                <li><a href="index.html" class="nav-link">Sign out</a></li>
             </ul>
             <div class="hamburger">
                 <span class="bar"></span>
