--- a/register/register.css
+++ b/register/register.css
@@ -6,29 +6,48 @@
 body {
   margin: 0;
   height: 100vh;
-  background: linear-gradient(135deg, #43cea2, #9b59ff, #ff4ecd);
+  overflow: hidden;
+  background-image: linear-gradient(rgba(255, 255, 255, 0.659), rgba(255, 255, 255, 0.659)), 
+  url('../images/banner.png');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.register-container {
+  height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
-.login-container {
-  width: 100%;
-  max-width: 400px;
-  padding: 20px;
-}
-
-.login-card {
+.register-card {
   background: white;
   border-radius: 12px;
-  padding: 30px 25px;
+  padding: 45px 25px;
+  width: 100%;
+  max-width: 360px;
   text-align: center;
   box-shadow: 0 15px 40px rgba(0,0,0,0.15);
 }
 
-.login-card h2 {
-  margin-bottom: 25px;
+.register-card h2 {
+  margin-bottom: 30px;
+  margin-top: 20px;
   font-weight: 600;
+  font-family: Lucida;
+  color: rgb(131, 17, 17);
+  font-size: 30px;
+}
+
+.brand {
+  font-family: "Playfair Display", serif;
+  font-style: italic;  
+  letter-spacing: 1px;
+  background: rgb(131, 17, 17);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
 .input-group {
@@ -50,16 +69,7 @@ body {
   font-size: 14px;
 }
 
-.forgot {
-  font-size: 12px;
-  color: #777;
-  text-decoration: none;
-  display: block;
-  text-align: right;
-  margin-bottom: 20px;
-}
-
-.login-btn {
+.register-btn {
   width: 100%;
   padding: 12px;
   border: none;
@@ -68,48 +78,20 @@ body {
   color: white;
   font-weight: bold;
   cursor: pointer;
-  margin-bottom: 25px;
-}
-
-.login-btn:hover {
-  opacity: 0.9;
-}
-
-.or {
-  font-size: 12px;
-  color: #888;
-  margin-bottom: 10px;
-}
-
-.socials {
-  display: flex;
-  justify-content: center;
-  gap: 15px;
+  margin-top: 10px;
   margin-bottom: 20px;
 }
 
-.icon {
-  width: 35px;
-  height: 35px;
-  border-radius: 50%;
-  color: white;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-weight: bold;
-  cursor: pointer;
+.register-btn:hover {
+  opacity: 0.9;
 }
 
-.facebook { background: #3b5998; }
-.twitter { background: #1da1f2; }
-.google { background: #db4437; }
-
-.signup-text {
+.login-text {
   font-size: 12px;
   color: #888;
 }
 
-.signup-link {
+.login-link {
   font-size: 13px;
   font-weight: bold;
   color: #ff4ecd;
