--- a/login/login.css
+++ b/login/login.css
@@ -40,10 +40,8 @@ body {
 }
 
 .brand {
-  font-family: "Playfair Display", serif;
   font-style: italic;  
-  letter-spacing: 1px;
-  background: rgb(131, 17, 17);
+  background: #8f0808;
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -56,7 +54,7 @@ body {
 
 .input-group label {
   font-size: 13px;
-  color: #ce0000;
+  color: #8f0808;
 }
 
 .input-group input {
@@ -73,7 +71,7 @@ body {
   padding: 12px;
   border: none;
   border-radius: 25px;
-  background: linear-gradient(to right, #630000, #7c0000);
+  background: #6b0000;
   color: white;
   font-weight: bold;
   cursor: pointer;
@@ -92,6 +90,6 @@ body {
 .signup-link {
   font-size: 13px;
   font-weight: bold;
-  color: rgb(131, 17, 17);
+  color: #6b0000;
   text-decoration: none;
 }
