--- a/register/register.css
+++ b/register/register.css
@@ -36,7 +36,7 @@ body {
   margin-top: 20px;
   font-weight: 600;
   font-family: Lucida;
-  color: rgb(131, 17, 17);
+  color: #6b0000;
   font-size: 30px;
 }
 
@@ -44,7 +44,7 @@ body {
   font-family: "Playfair Display", serif;
   font-style: italic;  
   letter-spacing: 1px;
-  background: rgb(131, 17, 17);
+  background: #8f0808;
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -74,7 +74,7 @@ body {
   padding: 12px;
   border: none;
   border-radius: 25px;
-  background: linear-gradient(to right, #43cea2, #ff4ecd);
+  background: #6b0000;
   color: white;
   font-weight: bold;
   cursor: pointer;
@@ -94,6 +94,6 @@ body {
 .login-link {
   font-size: 13px;
   font-weight: bold;
-  color: #ff4ecd;
+  color: #6b0000;
   text-decoration: none;
 }
