fix upload issues

--- a/outfits/outfits.css
+++ b/outfits/outfits.css
@@ -63,7 +63,7 @@ select {
 }
 
 .generate-btn {
-  background: #6b000079;
+  background: #6b0000;
   color: white;
   border: none;
   padding: 1rem 3rem;
